--- a/src/main/resources/assets/tutorialmod/lang/en_us.json
+++ b/src/main/resources/assets/tutorialmod/lang/en_us.json
@@ -7,5 +7,6 @@
   "block.tutorialmod.zircon_ore": "Zircon Ore",
   "block.tutorialmod.deepslate_zircon_ore": "Deepslate Zircon Ore",
   "block.tutorialmod.netherrack_zircon_ore": "Netherrack Zircon Ore",
-  "block.tutorialmod.endstone_zircon_ore": "Endstone Zircon Ore"
+  "block.tutorialmod.endstone_zircon_ore": "Endstone Zircon Ore",
+  "block.turoailmod.jumpy_block": "Jumpy Block"
 }
