Added blueberries, blueberry seeds, and blueberry crop

--- a/src/main/resources/assets/tutorialmod/lang/en_us.json
+++ b/src/main/resources/assets/tutorialmod/lang/en_us.json
@@ -2,6 +2,8 @@
   "item.tutorialmod.zircon": "Zircon",
   "item.tutorialmod.raw_zircon": "Raw Zircon",
   "item.tutorialmod.eight_ball": "Eight Ball",
+  "item.tutorialmod.blueberry": "Blueberry",
+  "item.tutorialmod.blueberry_seeds": "Blueberry Seeds",
 
   "block.tutorialmod.zircon_block": "Block of Zircon",
   "block.tutorialmod.zircon_ore": "Zircon Ore",
@@ -9,5 +11,6 @@
   "block.tutorialmod.netherrack_zircon_ore": "Netherrack Zircon Ore",
   "block.tutorialmod.endstone_zircon_ore": "Endstone Zircon Ore",
   "block.tutorialmod.jumpy_block": "Jumpy Block",
-  "block.tutorialmod.zircon_lamp_block": "Zircon Lamp Block"
+  "block.tutorialmod.zircon_lamp_block": "Zircon Lamp Block",
+  "block.tutorialmod.blueberry_crop": "Blueberry Crop"
 }
